stop overflow in calculator display for larger numbers

--- a/calculator.css
+++ b/calculator.css
@@ -17,7 +17,7 @@ body {
 }
 
 #calculatorDisplay {
-    border: 2px solid black;
+    border: 2px solid lightgoldenrodyellow;
     border-radius: 6px;
     height: 1.5em;
     width: 4.5em;
@@ -28,6 +28,7 @@ body {
     justify-content: flex-end;
     font-size: 60px;
     padding-right: .25em;
+    overflow: hidden;
 }
 
 .row0, .row1, .row2, .row3, .row4 {
